[Ajith] || Logger behaviour updated.